<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_token_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_token_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/investment_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ico_participation_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_token_title_textview" />

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/token_name_autocomplete_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/token_name_hint"
        android:inputType="textCapWords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/investment_details_title" />

    <EditText
        android:id="@+id/invested_amount_edit_text"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/invested_amount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/token_name_autocomplete_textview" />

    <TextView
        android:id="@+id/investment_currency_describer_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/invested_amount_describer"
        app:layout_constraintBaseline_toBaselineOf="@id/invested_amount_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/investment_currency_name_autocomplete_textview"
        app:layout_constraintStart_toEndOf="@id/invested_amount_edit_text" />

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/investment_currency_name_autocomplete_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/currency_name"
        android:inputType="textCapCharacters"
        app:layout_constraintBaseline_toBaselineOf="@id/invested_amount_edit_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/received_amount_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/amount_received"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invested_amount_edit_text" />

    <Button
        android:id="@+id/add_token"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:text="Add Token"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/received_amount_edit_text" />

</android.support.constraint.ConstraintLayout>